After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 629310 - User list no longer has focus
User list no longer has focus
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
2.32.x
Other Linux
: Normal minor
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2010-09-10 17:42 UTC by Josselin Mouette
Modified: 2011-02-07 14:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Correctly give focus to the user chooser on startup (1.77 KB, patch)
2011-01-12 17:43 UTC, Vincent Untz
committed Details | Review

Description Josselin Mouette 2010-09-10 17:42:26 UTC
Note: this is a regression since 2.30.2.

When the login window shows up, the user list no longer has the focus. You have to use the mouse or navigate to it instead of just pressing enter for the first user in the list.
Comment 1 Ionut Biru 2010-10-04 16:45:01 UTC
this is present in 2.32 too. In my opinion this is important to get fixed ASAP.

Users with visually impaired can't login into gnome because of that. It used to work in the past.
Comment 2 Josselin Mouette 2010-10-05 18:31:26 UTC
I think it is a problem in the interaction with metacity, because of the login window itself doesn’t have the focus, although in the window, the user list is the widget with the focus.
Comment 3 C Bispham 2010-10-06 06:53:01 UTC
I'm experiencing possibly the same problem, although for me it started with 2.32.0. I have to first hit an arrow key or tab, for the first user in the list to be selected and second hit enter. Before all I had to do was hit enter. It's annoying to have steps added to the process.

Strangely, the first (and only for me) user in the list appears to be highlighted, it is apparently not actually selected. There's a slight change in the appearance of the highlight when I hit an arrow key or tab.

But, again, this problem appeared for me today with the upgrade to 2.32. I never had this problem with 2.30.
Comment 4 Josselin Mouette 2010-10-06 07:30:17 UTC
Indeed, in pristine 2.30.5 it doesn’t happen; this was caused by bad interaction with a seemingly unrelated patch.
Comment 5 C Bispham 2010-10-06 20:42:45 UTC
Any reason not to downgrade? What improvements does 2.32 bring?
Comment 6 chuchiperriman 2010-11-20 17:01:55 UTC
The same problem in 2.32.1
Comment 7 Vincent Untz 2011-01-12 17:43:47 UTC
Created attachment 178161 [details] [review]
Correctly give focus to the user chooser on startup

We manually handle how focus works in the GdmChooserWidget container,
and we try to automatically move the focus to the treeview inside the
chooser. However, it fails the first time because the treeview is not
realized yet and the logic in the code assumes that if focus moved to
the chooser, it moved to the treeview, so later attempt to get the focus
grabbed by the treeview are just ignored.

It works fine when using gtk_widget_child_focus() to give the focus to
the treeview. And this makes more sense since the chooser is a container
anyway.
Comment 8 Michael Whapples 2011-01-21 08:52:25 UTC
While the patch attached to this bug seems to fix the direct issue of being able to just press enter or pressing up or down to navigate the list of users, it seems to still have issues for accessibility. Using the orca screen reader, when gdm first loads it does not get any information about the item selected in the chooser and when I cursor up or down orca gets no accessible events telling it the selection has moved. It appears that to make orca read the list properly I still need to give it focus in the same way as I do before this patch is applied (IE. press tab or move focus away and then back).
Comment 9 chuchiperriman 2011-01-22 00:11:14 UTC
It works again for me in arch linux. The gdm version is 2.32.0. I don't know exactly why...
Comment 10 Ionut Biru 2011-01-22 00:13:28 UTC
(In reply to comment #9)
> It works again for me in arch linux. The gdm version is 2.32.0. I don't know
> exactly why...

It works because I included the patch in our package.
Comment 11 C Bispham 2011-01-22 06:39:22 UTC
(In reply to comment #10)
> (In reply to comment #9)
> > It works again for me in arch linux. The gdm version is 2.32.0. I don't know
> > exactly why...
> 
> It works because I included the patch in our package.

Thank you so much for including the patch. I'm using Arch too and really appreciating having this bug fixed.
Comment 12 Marco Biscaro 2011-01-22 14:50:24 UTC
Another point: when returning from powersave mode (monitor off) the first user is selected.

Steps to reproduce:

1. Start your OS
2. The GDM screen appears. Go take a coffee and come back some minutes later
3. Your monitor is off. When you move your mouse, it turns on and the first user on list is now focused
Comment 13 Martin Pitt 2011-01-24 16:09:36 UTC
Confirming the problem and that Vincent's patch fixes it. Merci!
Comment 14 Ray Strode [halfline] 2011-02-07 14:46:54 UTC
Attachment 178161 [details] pushed as 00612f5 - Correctly give focus to the user chooser on startup